--- a/angular.json
+++ b/angular.json
@@ -38,12 +38,7 @@
               "src/theme.less",
               "src/styles.sass"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
